cmg page update

--- a/cmg.html
+++ b/cmg.html
@@ -81,16 +81,40 @@
   <section class="pt-5 mt-3">
     <div class="container center pb-4 mt-5">
       <div class="pb-2">
+        <img class="w-25 col-sm-2 pl-0 pr-0" src="img/cmg/logo.png" alt="">
         <h2 style="font-size: 20px; font-weight: 600">Coyle Media Group</h2>
       </div>
       <div>
-        <p>When I joined the team at Coyle Media Group (CMG), I was joining a start-up even though they had been in the publishing industry for 17 years. Instead of outsourcing to a third party, CMG was now bringing magazine design in-house and launching digital initiatives to bring their publications up to the speed of the modern publishing world.</p>
+        <p>Coyle Media Group is a full service media agency local to Ottawa, specializing in Digital, Publishing and Trade Shows.</p>
+        <p style="font-weight: 600;">My key contributions to Coyle Media Group:</p>
+        <ul>
+          <li class="pb-3"><span class="font-weight-bold">Spearheaded in-house design</span> of <em>Ottawa Luxe</em> and <em>Ottawa Wedding</em> magazines.</li>
+          <li class="pb-3"><span class="font-weight-bold">Defined brand guidelines.</span> No brand guidelines existed when I joined CMG.</li>
+          <li class="pb-3"><span class="font-weight-bold">Implemented a design process and system.</span> Established a design system, a project timeline and a design process. Designed the layout and typography for all of the advertorial and editorial and approximately 40% of the advertising for each issue.</li>
         </ul>
-      </div>
     </div>
   </section>
 
-  <section class="mx-auto cmg-mobile">
+
+  <section class="pb-5">
+    <div class="container">
+      <img class="img-fluid" src="img/cmg/cmg-guides-1.jpg" alt="">
+            <p class="center pb-5 pt-4 text-center caption">CMG Brand Guidelines (above)</p>
+    </div>
+
+    <div class="container">
+      <img class="img-fluid" src="img/cmg/luxe-fall.jpg" alt="">
+          <p class="center pb-5 pt-4 text-center caption">Luxe Fall Layout Samples</p>
+      <img class="img-fluid" src="img/cmg/luxe-fall-1.jpg" alt="">
+          <p class="center pb-5 pt-4 text-center caption">Luxe Fall Spread Example</p>
+      <img class="img-fluid" src="img/cmg/luxe-spring.jpg" alt="">
+          <p class="center pb-5 pt-4 text-center caption">Luxe Spring Layout Samples</p>
+      <img class="img-fluid" src="img/cmg/luxe-Spring-1.jpg" alt="">
+          <p class="center pb-2 pt-4 text-center caption">Luxe Spring Spread Example</p>
+    </div>
+  </section>
+
+<!--  <section class="mx-auto cmg-mobile">
     <div class="col-sm-6 mx-auto pb-0">
         <div class="text-center mx-auto">
           <img class="img-fluid" src="img/cmg/luxe-spread-2.png" alt="">
@@ -99,17 +123,17 @@
           <img class="img-fluid" src="img/cmg/luxe-spread.png" alt="">
         </div>
     </div>
-  </section>
+  </section>-->
 
 
-  <section>
+  <!--<section>
     <div class="container pb-5">
-      <div class="row center">
+      <div class="row center">-->
         <!-- Phone -->
-        <div class="container">
-          <div class="row text-center cards">
+        <!--<div class="container">
+          <div class="row text-center cards">-->
             <!--Phone & Tablet-->
-            <div class="col-md-6">
+            <!--<div class="col-md-6">
               <a class="d-block mx-auto mb-2" href="https://console.virtualpaper.com/luxe/luxe-fall-2019/" target="_blank">
                               <img class="img-fluid project" src="img/cmg/luxe-spread-2.png" alt="">
                               <p class="pt-2 text-center caption">Luxe Fall 2019</p>
@@ -121,11 +145,11 @@
                               <p class="pt-2 text-center caption">Luxe Spring 2019</p>
                             </a>
             </div>
-          </div>
+          </div>-->
 
 
           <!-- Desktop -->
-          <div class="row pt-5 mx-auto">
+        <!--  <div class="row pt-5 mx-auto">
             <p class="pt-2">Between <em>Fifty-Five Plus, Ottawa Wedding and Luxe Ottawa, Luxe</em> offered the most creative freedom as a designer. Check out the issues below to see my work on <em>Luxe</em>.</p>
             <div class="col-lg-6 cards-desktop mx-auto">
               <a class="d-block mx-auto" href="https://console.virtualpaper.com/luxe/luxe-fall-2019/" target="_blank">
@@ -146,9 +170,9 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
-
+<!--
   <section class="pt-3">
     <div class="container center">
       <h2 style="font-size: 20px; font-weight: 600">Insights and Outcomes</h2>
@@ -179,13 +203,16 @@
       </div>
     </div>
     </div>
-  </section>
+  </section>-->
 
   <section class="pb-4">
       <ul class="scope-list center">
-        <li>Magazine Design</li>
+        <li>Editorial</li>
+        <li>Advertorial</li>
         <li>Typesetting</li>
-        <li>Design Process</li>
+        <li>Layout</li>
+        <li>Preflighting</li>
+        <li>Production</li>
       </ul>
   </section>
 
