--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <div class="row pt-4">
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="euna.html">
-        <img class="img-fluid project" src="img/euna-1.gif">
+        <img class="img-fluid project" src="img/euna-2.png">
       </a>
         <p class="project-sub">Design. Creative. Brand.</p>
         <h5 class="project-title">Euna Solutions</h5>
@@ -152,7 +152,7 @@
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="nng.html">
-        <img class="img-fluid project" src="img/nng.gif">
+        <img class="img-fluid project" src="img/nng-1.png">
       </a>
         <p class="project-sub">Book Cover. Visual System. Design Thinking.</p>
         <h5 class="project-title">Nielsen Norman Group</h5>
@@ -169,7 +169,7 @@
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="masterpiece-vr.html">
-        <img class="img-fluid project" src="img/mpvr-1.gif">
+        <img class="img-fluid project" src="img/mpvr-1.png">
       </a>
         <p class="project-sub">UX. UI. Virtual Reality.</p>
         <h5 class="project-title">MasterpieceVR</h5>
@@ -192,7 +192,7 @@
       <div class="w-100"></div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="hhi.html">
-          <img class="img-fluid project" src="img/hhi.gif">
+          <img class="img-fluid project" src="img/hhi-1.png">
         </a>
         <p class="project-sub">Artwork. Brand. Passion Project.</p>
         <h5 class="project-title">Half Halt Illustrations</h5>
