updated questica and ecivis
tweaks too

--- a/bonfire.html
+++ b/bonfire.html
@@ -56,14 +56,14 @@
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica & eCivis</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
-              <a class="dropdown-item nav-item" href="various.html">Fun Stuff</a>
+              <a class="dropdown-item nav-item" href="various.html">Various Works</a>
             </div>
           </div>
           <li class="nav-item mx-0 mx-lg-1">
@@ -93,7 +93,8 @@
   <section class="pt-5 mt-3">
     <div class="container center pb-4 mt-5">
       <div class="pb-2">
-        <h2 style="font-size: 20px; font-weight: 600">Bonfire, a Euna Solutions Brand (Procurement Software)</h2>
+        <img class="w-50 col-sm-4 pl-0 pr-0 pb-3" src="img/euna/euna-bonfire.jpg" alt="">
+        <h2 style="font-size: 20px; font-weight: 600">Bonfire Procurement Software</h2>
       </div>
       <div>
         <p>Bonfire is one of the multiple product lines I provided Graphic Design support for under Euna Solutions—this project highlights my contributions to Bonfire specifically. Every year, Bonfire releases a State of Public Sourcing Report (SOPS). The 2023 report is backed by comprehensive data from almost 600 U.S. public agencies that use Bonfire.</p>
@@ -180,14 +181,12 @@
 
   <section class="pb-5 pt-4">
       <ul class="scope-list center">
-        <li>UXR</li>
+        <li>Research</li>
         <li>Campaign Creative</li>
-        <li>Report Design</li>
-        <li>Events Assets</li>
+        <li>Layout Design</li>
         <li>Data Visuals</li>
         <li>Illustration</li>
         <li>Typesetting</li>
-        <li>Custom Landing Page</li>
       </ul>
   </section>
 
@@ -203,10 +202,10 @@
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
-            <a href="nng.html"><img class="img-fluid project" src="img/nng-1.png"></a>
+            <a href="questica.html"><img class="img-fluid project" src="img/questica.jpg"></a>
           </div>
-          <p class="project-sub">Visual System. Design Thinking.</p>
-          <h5 class="project-title">Nielsen Norman Group</h5>
+          <p class="project-sub">Marketing Collateral. Campaign Creative.</p>
+          <h5 class="project-title">Questica & eCivis</h5>
         </div>
       </div>
     </div>
