--- a/csp.html
+++ b/csp.html
@@ -55,14 +55,14 @@
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica & eCivis</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
-              <a class="dropdown-item nav-item" href="various.html">Fun Stuff</a>
+              <a class="dropdown-item nav-item" href="various.html">Various Works</a>
             </div>
           </div>
           <li class="nav-item mx-0 mx-lg-1">
@@ -111,11 +111,11 @@
         <p>Canadian Science Publishing (CSP) is an Ottawa-based not-for-profit scholarly publisher that provides access to their suite of scientific journals through paid and open access subscriptions.</p>
         <p style="font-weight: 600;">My key contributions to Canadian Science Publishing:</p>
         <ul>
-          <li class="pb-3"><span class="font-weight-bold">Led scientific journal cover selection and production.</span> Communication with SPEs, MEs journal editors was key in this process.</li>
-          <li class="pb-3"><span class="font-weight-bold">Implemented a design & system process.</span> This helped the team establish structure and helped Operations and Sales understand how and why the team chooses to implement certain components over others.</li>
-          <li class="pb-3"><span class="font-weight-bold">Initiated usability testing of sales and marketing tools.</span> Since no usability tests were previously conducted, we started conducting testing and used the feedback to either improve or replace our current tools.</li>
-          <li class="pb-3"><span class="font-weight-bold">Implemented tools with built-in metrics.</span> This gave the team a way to measure success and inform data-driven decisions.</li>
-          <li class="pb-3"><span class="font-weight-bold">Improved brand and visual presence across all channels.</span> There was little to no brand presence when I came on board, librarians and agents have become aware of CSP since starting promotional campaigns.</li>
+          <li class="pb-3"><span class="font-weight-bold">Led scientific journal cover selection and production.</span> Communication with scientific publishing and managing editors was key in this process.</li>
+          <li class="pb-3"><span class="font-weight-bold">Implemented a design & system process.</span> This established structure and helped Operations and Sales understand why the team chose to implement certain components.</li>
+          <li class="pb-3"><span class="font-weight-bold">Initiated usability testing of sales and marketing tools.</span> We conducted user testing and integrated the feedback to either improve or replace current tools.</li>
+          <li class="pb-3"><span class="font-weight-bold">Implemented tools with built-in metrics.</span> This gave the team a way to measure success, report quantitative data, and inform data-driven decisions.</li>
+          <li class="pb-3"><span class="font-weight-bold">Improved brand and visual presence across all channels.</span> There was little to no brand presence when I came on board, librarians and agents have become more aware of CSP since starting promotional campaigns.</li>
         </ul>
       <!--<div>
         <p>When I joined CSP, there was no solution in place for marketing to measure performance metrics of sales-specific campaigns. As a result, there was no way for marketing to know if these campaigns were successful. This caused a gap between marketing and sales because marketing could not report on current and past campaigns or inform future campaigns using quantitative data. It also meant that marketing could not support sales to its fullest extent.</p>
@@ -165,12 +165,12 @@
   </section>-->
 
 <section class="pb-5">
-  <div class="container">
+  <div class="container center">
     <img class="img-fluid" src="img/csp/csp-1.jpg" alt="">
           <p class="center pb-5 pt-5"><span style="font-weight: 600;">Top left:</span> Inner spread example of the sales catalogue layout. <span style="font-weight: 600;">Top center:</span> Social Media Promotional Graphic. <span style="font-weight: 600;">Top right:</span> Cover for CSP's Open Access Roadmap. <span style="font-weight: 600;">Bottom center:</span> Call for Papers template design. <span style="font-weight: 600;">Bottom right:</span> Journal Catalogue landing page.</p>
   </div>
 
-  <div class="container">
+  <div class="container center">
     <img class="img-fluid" src="img/csp/csp-2.jpg" alt="">
     <p class="center pb-5 pt-5">CSP hosted an annual image contest called <em>Visualizing Science</em> to support researchers and feature their images on journal covers. I created a sub-brand specific to the contest and redesigned the image submission platform (above). <br><br>Below is a selection from the 20+ journal covers I curated on an annual basis.</p>
   <div class="container pr-0 pl-0">
