--- a/euna.html
+++ b/euna.html
@@ -55,14 +55,14 @@
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica & eCivis</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
-              <a class="dropdown-item nav-item" href="various.html">Fun Stuff</a>
+              <a class="dropdown-item nav-item" href="various.html">Various Works</a>
             </div>
           </div>
           <li class="nav-item mx-0 mx-lg-1">
@@ -91,6 +91,7 @@
   <section class="pt-5 mt-3">
     <div class="container center pb-4 mt-5">
       <div class="pb-2">
+        <img class="w-25 col-sm-2 pl-0 pr-0 pb-2" src="img/euna/logo.jpg" alt="">
         <h2 style="font-size: 20px; font-weight: 600">Euna Solutions (formerly GTY)</h2>
       </div>
       <div>
@@ -98,7 +99,7 @@
         <p style="font-weight: 600;">My key contributions:</p>
         <ul>
           <li class="pb-2"><span style="font-weight: 600;">Delivered high-impact marketing and brand collateral,</span> strengthening brand presence driving performance across all channels.</li>
-          <li class="pb-2"><span style="font-weight: 600;">Created a design system</span> for campaign landing pages that effectively decreased campaign turnaround time.</li>
+          <li class="pb-2"><span style="font-weight: 600;">Created a design system</span> for campaign landing pages that effectively improved campaign turnaround time by 20%.</li>
           <li class="pb-2"><span style="font-weight: 600;">Facilitated a swift rebrand</span> with exceptional organizational and time management skills.</li>
           <li class="pb-2"><span style="font-weight: 600;">Boosted team efficiency</span> by creating and implementing brand libraries, templates and standardized file systems.</li>
         </ul>
@@ -107,32 +108,20 @@
   </section>
 
 
-  <section class="pb-4 pt-3">
+  <section class="pb-2 pt-3">
     <div class="container center">
       <div>
         <div class="text-center">
           <img class="img-fluid pb-3" src="img/euna/euna-2.png">
-          <p class="pt-0 mt-0 text-center caption">Brand Guidelines</p>
+          <p class="pt-3 pb-5 mt-0 text-center caption">Brand Guidelines</p>
         </div>
         <div class="text-center">
-          <img class="img-fluid" src="img/euna/euna-cards.png">
-          <p class="pt-0 mt-0 pb-3 pt-3 text-center caption">Business Cards</p>
+          <img class="img-fluid pb-3" src="img/euna/euna-1.jpg">
+          <p class="pt-3 pb-5 mt-0 pb-3 text-center caption">Euna Brand Applications</p>
         </div>
         <div class="text-center">
-          <img class="img-fluid pb-3" src="img/euna/euna-4.png">
-          <p class="pt-0 mt-0 pb-5 text-center caption">Euna Budget Whitepaper</p>
-        </div>
-        <div class="text-center">
-          <img class="img-fluid" src="img/euna/euna-1.png">
-          <p class="pt-0 mt-0 pb-3 pt-3 text-center caption">Landing Pages</p>
-        </div>
-        <div class="text-center">
-          <img class="img-fluid" src="img/euna/euna-5.png">
-          <p class="pt-0 mt-0 pb-3 pt-3 text-center caption">Landing Page Guidelines</p>
-        </div>
-        <div class="text-center">
-          <img class="img-fluid pb-3" src="img/euna/euna-3.png">
-          <p class="pt-0 mt-0 pb-3 text-center caption">Additional Euna Brand Applications</p>
+          <img class="img-fluid pb-3" src="img/euna/euna-spreads.jpg">
+          <p class="pt-3 pb-5 mt-0 text-center caption">Euna Budget Whitepaper</p>
         </div>
       </div>
     </div>
@@ -232,14 +221,14 @@
   </section>-->
 
 
-  <section class="pb-4 pt-4">
+  <section class="pb-4">
     <ul class="scope-list center">
-      <li>Brand</li>
-      <li>Marketing</li>
-      <li>UX</li>
-      <li>Frontend</li>
-      <li>Events</li>
-      <li>Digital</li>
+      <li>Brand Application</li>
+      <li>Marketing Collateral</li>
+      <li>Campaign Creative</li>
+      <li>Frontend Design</li>
+      <li>Events Assets</li>
+      <li>Digital & Print</li>
     </ul>
   </section>
 
@@ -251,17 +240,17 @@
       <div class="row pt-4 pb-2">
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
-            <a href="bonfire.html"><img class="img-fluid project" src="img/bonfire-1.png"></a>
+            <a href="bonfire.html"><img class="img-fluid project" src="img/bonfire.jpg"></a>
           </div>
           <p class="project-sub">Campaign Creative. Design. Data Visuals.</p>
           <h5 class="project-title">Bonfire Interactive</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
-            <a href="questica.html"><img class="img-fluid project" src="img/questica-1.png"></a>
+            <a href="questica.html"><img class="img-fluid project" src="img/questica.jpg"></a>
           </div>
-          <p class="project-sub">Campaign Creative. Design. Illustration.</p>
-          <h5 class="project-title">Questica Budget</h5>
+          <p class="project-sub">Marketing Collateral. Campaign Creative.</p>
+          <h5 class="project-title">Questica & eCivis</h5>
         </div>
       </div>
     </div>
