--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica & eCivis</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
-              <a class="dropdown-item nav-item" href="various.html">Fun Stuff</a>
+              <a class="dropdown-item nav-item" href="various.html">Various Works</a>
             </div>
           </div>
           <li class="nav-item mx-0 mx-lg-1">
@@ -137,18 +137,18 @@
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="bonfire.html">
-        <img class="img-fluid project" src="img/bonfire-1.png">
+        <img class="img-fluid project" src="img/bonfire.jpg">
       </a>
-        <p class="project-sub">Campaign Creative. Design. Data Visuals.</p>
+        <p class="project-sub">Campaign Creative. Data Visuals. Layout.</p>
         <h5 class="project-title">Bonfire Interactive</h5>
       </div>
       <div class="w-100"></div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="questica.html">
-      <img class="img-fluid project" src="img/questica-1.png">
+      <img class="img-fluid project" src="img/questica.jpg">
     </a>
-        <p class="project-sub">Campaign Creative. Design. Illustration.</p>
-        <h5 class="project-title">Questica Budget</h5>
+        <p class="project-sub">Marketing Collateral. Campaign Creative.</p>
+        <h5 class="project-title">Questica & eCivis</h5>
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="nng.html">
@@ -164,7 +164,7 @@
         <a class="d-block mx-auto mb-4" href="csp.html">
         <img class="img-fluid project" src="img/csp-1.png">
       </a>
-        <p class="project-sub">Brand. Frontend. Illustration.</p>
+        <p class="project-sub">Brand. Frontend. Production.</p>
         <h5 class="project-title">Canadian Science Publishing</h5>
       </div>
       <div class="col-sm-6">
@@ -199,10 +199,10 @@
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="various.html">
-          <img class="img-fluid project" src="img/fun-stuff.gif">
+          <img class="img-fluid project" src="img/various-1.png">
         </a>
         <p class="project-sub">Code. Motion. Design. Illustration.</p>
-        <h5 class="project-title">Fun Stuff</h5>
+        <h5 class="project-title">Various Works</h5>
       </div>
     </div>
   </div>
