--- a/questica.html
+++ b/questica.html
@@ -55,14 +55,14 @@
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica & eCivis</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
-              <a class="dropdown-item nav-item" href="various.html">Fun Stuff</a>
+              <a class="dropdown-item nav-item" href="various.html">Various Works</a>
             </div>
           </div>
           <li class="nav-item mx-0 mx-lg-1">
@@ -103,25 +103,47 @@
     </div>
   </section>-->
 
-  <section class="pt-5 mt-3">
-    <div class="container center pb-4 mt-5">
+  <section class="pt-5 mt-3 pb-3">
+    <div class="container center mt-5">
       <div class="pb-2">
-        <h2 style="font-size: 20px; font-weight: 600">Questica, a Euna Solutions Brand (Budgeting Software)</h2>
+        <img class="w-50 col-sm-6 pl-0 pr-0 pb-3" src="img/euna/logo-qe.jpg" alt="">
+        <h2 style="font-size: 20px; font-weight: 600">Questica Budget and eCivis Grants Management Software</h2>
       </div>
       <div>
-        <p>Questica is one of the multiple product lines I provided Graphic Design support for under Euna Solutions. This ABM campaign was a fun project highlight. The campaign promoted a new product feature called <em>Budget Book Studio</em>. A focused approach targeted prospects, in this case we filtered by State/Province, to attain new leads. We utilized MailJoy for the direct mail marketing portion and designed 9 state/province specific postcards.</p>
-        <p style="font-weight: 600;">Design Parameters</p>
+        <!--<p>Questica is one of the multiple product lines I provided Graphic Design support for under Euna Solutions. This ABM campaign was a fun project highlight. The campaign promoted a new product feature called <em>Budget Book Studio</em>. A focused approach targeted prospects, in this case we filtered by State/Province, to attain new leads. We utilized MailJoy for the direct mail marketing portion and designed 9 state/province specific postcards.</p>-->
+        <p>Previously indivudal business units, Questica and eCivis are now consolidated under Euna Solutions (formerly GTY). I provided Graphic Design support for both product lines with marketing collateral and campaign creative.</p>
+        <p style="font-weight: 600;">My key contributions to Questica & eCivis:</p>
         <ul>
+          <li class="pb-2"><span style="font-weight: 600;">Brand templating.</span> Whitepapers, case studies, product sheets, presentations, letterheads, business cards.</li>
+          <li class="pb-2"><span style="font-weight: 600;">Marketing program support.</span> Graphics for organic and paid social, website, blog, landing pages, 6Sense, StackAdapt, emails and newsletters.</li>
+          <li class="pb-2"><span style="font-weight: 600;">Events support.</span> Booth design, rollup banners, flyers, one pagers, swag.</li>
+          <li class="pb-2"><span style="font-weight: 600;">CS assets.</span> Improve and provide assets to better support CS.</li>
+        </ul>
+        <!--<ul>
           <li class="pb-2"><span style="font-weight: 600;">Eye-catching.</span> Visually engage with the viewer, they'll want to hang this in their office.</li>
           <li class="pb-2"><span style="font-weight: 600;">Memorable.</span> Design something on-brand, but break out of the core corporate mold.</li>
           <li class="pb-2"><span style="font-weight: 600;">Print-ready.</span> The CMYK graphics should be sharp as a tack.</li>
           <li class="pb-2"><span style="font-weight: 600;">Be familial.</span> All the postcards should look like they belong together.</li>
-        </ul>
+        </ul>-->
       </div>
     </div>
   </section>
 
-  <div class="container">
+  <section>
+    <div class="container center">
+      <img class="img-fluid" src="img/euna/questica/questica-1.jpg" alt="">
+      <p class="caption text-center pt-3 pb-4">Questica Brand Applications</p>
+    </div>
+  </section>
+
+  <section>
+    <div class="container center">
+      <img class="img-fluid" src="img/euna/ecivis-1.jpg" alt="">
+      <p class="caption text-center pt-3 pb-4">eCivis Brand Applications</p>
+    </div>
+  </section>
+
+<!--  <div class="container">
     <div class="row pt-3">
       <div class="col-sm-6 pb-3">
         <img class="img-fluid" src="img/euna/questica-2.png">
@@ -154,13 +176,15 @@
         <img class="img-fluid" src="img/euna/questica/fl.png">
       </div>
     </div>
-  </div>
+  </div>-->
 
-  <section class="pb-3 pt-5">
+  <section class="pb-3 pt-2">
       <ul class="scope-list center">
-        <li>Illustration</li>
         <li>Campaign Creative</li>
-        <li>Print Design</li>
+        <li>Advertising</li>
+        <li>Events Assets</li>
+        <li>Sales Assets</li>
+        <li>Design Templates</li>
       </ul>
   </section>
 
@@ -197,7 +221,7 @@
       <div class="row pt-4 pb-2">
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
-            <a href="bonfire.html"><img class="img-fluid project" src="img/bonfire-1.png"></a>
+            <a href="bonfire.html"><img class="img-fluid project" src="img/bonfire.jpg"></a>
           </div>
           <p class="project-sub">Campaign Creative. Design. Data Visuals.</p>
           <h5 class="project-title">Bonfire Interactive</h5>
