--- a/various.html
+++ b/various.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta property="og:title" content="Fun Stuff" />
+  <meta property="og:title" content="Various Works" />
   <meta property="og:url" content="https://www.hannahhatherell.com/various.html" />
   <meta property="og:image" content="https://www.hannahhatherell.com/various-1.png" />
 
@@ -55,7 +55,7 @@
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica & eCivis</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
@@ -79,7 +79,7 @@
   </nav>
 
   <div class="text-center pt-5 mt-5">
-    <h1 style="font-size: 96px; font-weight: 600" class="pt-3">Fun Stuff</h2>
+    <h1 style="font-size: 96px; font-weight: 600" class="pt-3">Various Works</h2>
   </div>
 
 <div class="bb pt-2 w-25"></div>
@@ -151,18 +151,6 @@
               <source src="img/figure-ground.mov" type="video/mp4">
             </video>
           </div>
-
-          <div class="col-lg-8 mx-auto pt-4">
-            <video muted class="vimeo-lg" style="width: 640px; height: 360px"loop autoplay>
-                  <source src="img/various/origami.mov" type="video/mp4">
-                </video>
-            <video muted class="vimeo-md" style="width: 540px; height: 260px"loop autoplay>
-                  <source src="img/various/origami.mov" type="video/mp4">
-                </video>
-            <video muted class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay controls>
-                  <source src="img/various/origami.mov" type="video/mp4">
-                </video>
-              </div>
 
       </section>
 
