--- a/cmg.html
+++ b/cmg.html
@@ -55,14 +55,14 @@
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica & eCivis</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
-              <a class="dropdown-item nav-item" href="various.html">Fun Stuff</a>
+              <a class="dropdown-item nav-item" href="various.html">Various Works</a>
             </div>
           </div>
           <li class="nav-item mx-0 mx-lg-1">
@@ -97,12 +97,12 @@
 
 
   <section class="pb-5">
-    <div class="container">
+    <div class="container center">
       <img class="img-fluid" src="img/cmg/cmg-guides-1.jpg" alt="">
             <p class="center pb-5 pt-4 text-center caption">CMG Brand Guidelines (above)</p>
     </div>
 
-    <div class="container">
+    <div class="container center">
       <img class="img-fluid" src="img/cmg/luxe-fall.jpg" alt="">
           <p class="center pb-5 pt-4 text-center caption">Luxe Fall Layout Samples</p>
       <img class="img-fluid" src="img/cmg/luxe-fall-1.jpg" alt="">
