--- a/masterpiece-vr.html
+++ b/masterpiece-vr.html
@@ -55,14 +55,14 @@
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica & eCivis</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
-              <a class="dropdown-item nav-item" href="various.html">Fun Stuff</a>
+              <a class="dropdown-item nav-item" href="various.html">Various Works</a>
             </div>
           </div>
           <li class="nav-item mx-0 mx-lg-1">
@@ -100,10 +100,10 @@
 
 
         <div class="mx-auto pt-3 pb-3">
-          <video class="vimeo-lg" style="width: 640px; height: 360px" controls loop autoplay>
+          <video class="vimeo-lg" style="width: 640px; height: 360px" loop autoplay>
                 <source src="img/mpvr/mpvr-video.mp4" type="video/mp4">
               </video>
-          <video class="vimeo-md" style="width: 540px; height: 260px" controls loop autoplay>
+          <video class="vimeo-md" style="width: 540px; height: 260px" loop autoplay>
                 <source src="img/mpvr/mpvr-video.mp4" type="video/mp4">
               </video>
           <video class="vimeo-sm" style="width: 275px; height: 160px" controls loop autoplay>
