--- a/nng.html
+++ b/nng.html
@@ -55,14 +55,14 @@
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica & eCivis</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
-              <a class="dropdown-item nav-item" href="various.html">Fun Stuff</a>
+              <a class="dropdown-item nav-item" href="various.html">Various Works</a>
             </div>
           </div>
           <li class="nav-item mx-0 mx-lg-1">
@@ -186,16 +186,16 @@
       <div class="row pt-4 pb-2">
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
-            <a href="questica.html"><img class="img-fluid project" src="img/questica-1.png"></a>
+            <a href="questica.html"><img class="img-fluid project" src="img/questica.jpg"></a>
           </div>
-          <p class="project-sub">Campaign Creative. Design. Illustration.</p>
-          <h5 class="project-title">Questica Budget</h5>
+          <p class="project-sub">Marketing Collateral. Campaign Creative.</p>
+          <h5 class="project-title">Questica & eCivis</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
             <a href="csp.html"><img class="img-fluid project" src="img/csp-1.png"></a>
           </div>
-          <p class="project-sub">UX. Frontend. Illustration.</p>
+          <p class="project-sub">Brand. Frontend. Production.</p>
           <h5 class="project-title">Canadian Science Publishing</h5>
         </div>
       </div>
